--- a/Gdynia/index1.html
+++ b/Gdynia/index1.html
@@ -1,5 +1,6 @@
-= Hello, Gdynia !  <http://gdynia.pl/bip>
-czesc artur
+= Hello, Gdynia !
+
+<http://gdynia.pl/bip>
 
 POWIERZCHNIA ogółem - 13 514 ha.
 
@@ -18,11 +19,11 @@ Grunty Skarbu Państwa w użytkowaniu wieczystym wynoszą 7,76 ha.
 
 
 == Dzielnice:
+<ol>
+<li>Babie Doły</li>
 
-Babie Doły
-
-Chwarzno-Wiczlino
-
+<li>Chwarzno-Wiczlino</li>
+</ol>
 
 Chylonia
 
