--- a/Gdynia/index1.html
+++ b/Gdynia/index1.html
@@ -20,10 +20,12 @@ Grunty Skarbu Państwa w użytkowaniu wieczystym wynoszą 7,76 ha.
 
 == Dzielnice:
 <ol>
-<li>Babie Doły</li>
-
-<li>Chwarzno-Wiczlino</li>
+  <li>awd</li>
+  <li>erer</li>
 </ol>
+Babie Doły
+
+Chwarzno-Wiczlino
 
 Chylonia
 
