--- a/Gdynia/index1.html
+++ b/Gdynia/index1.html
@@ -19,10 +19,11 @@ Grunty Skarbu Państwa w użytkowaniu wieczystym wynoszą 7,76 ha.
 
 
 == Dzielnice:
-<ol>
-  <li>awd</li>
-  <li>erer</li>
-</ol>
+
+<table>
+
+</table>
+
 Babie Doły
 
 Chwarzno-Wiczlino
@@ -66,3 +67,5 @@ Witomino Leśniczówka
 Witomino Radiostacja
 
 Wzgórze św. Maksymiliana
+
+<img src="https://github.com/mnke-j/my_html/gdynia/ikona.png" alt="">
