--- a/Gdynia/index1.html
+++ b/Gdynia/index1.html
@@ -68,4 +68,4 @@ Witomino Radiostacja
 
 Wzgórze św. Maksymiliana
 
-<img src="https://github.com/mnke-j/my_html/gdynia/ikona.png" alt="">
+image::https://github.com/mnke-j/my_html/gdynia/ikona.png[Tux,100,100]
