--- a/Gdynia/index1.html
+++ b/Gdynia/index1.html
@@ -68,4 +68,6 @@ Witomino Radiostacja
 
 Wzgórze św. Maksymiliana
 
-image::https://github.com/mnke-j/my_html/gdynia/ikona.png[Tux,100,100]
+image::https://github.com/mnke-j/my_html/gdynia/ikona.png[Ikona,600,420]
+
+image::ikona.png[ikonka,600,420]
