--- a/Gdynia/index1.html
+++ b/Gdynia/index1.html
@@ -1,6 +1,4 @@
-= Hello, Gdynia !
-
-<http://gdynia.pl/bip>
+= Hello, Gdynia !   <http://gdynia.pl/bip>
 
 POWIERZCHNIA ogółem - 13 514 ha.
 
@@ -19,10 +17,6 @@ Grunty Skarbu Państwa w użytkowaniu wieczystym wynoszą 7,76 ha.
 
 
 == Dzielnice:
-
-<table>
-
-</table>
 
 Babie Doły
 
