--- a/Gdynia/index1.html
+++ b/Gdynia/index1.html
@@ -8,6 +8,8 @@ Poza granicami miasta znajduje się 26,2 ha.
 
 Grunty Skarbu Państwa w użytkowaniu wieczystym wynoszą 7,76 ha.
 
+== Ludność:
+
 |===
 | Wyszczególnienie	| 30 VI 2017
 | Ludność ogółem	| 246 643
@@ -17,16 +19,16 @@ Grunty Skarbu Państwa w użytkowaniu wieczystym wynoszą 7,76 ha.
 
 
 == Dzielnice:
+[squere]
+* Babie Doły
 
-Babie Doły
+* Chwarzno-Wiczlino
 
-Chwarzno-Wiczlino
+* Chylonia
 
-Chylonia
+* Cisowa
 
-Cisowa
-
-Dąbrowa
+* Dąbrowa
 
 Działki Leśne
 
