--- a/Gdynia/index1.html
+++ b/Gdynia/index1.html
@@ -30,38 +30,38 @@ Grunty Skarbu Państwa w użytkowaniu wieczystym wynoszą 7,76 ha.
 
 * Dąbrowa
 
-Działki Leśne
+* Działki Leśne
 
-Grabówek
+* Grabówek
 
-Kamienna Góra
+* Kamienna Góra
 
-Karwiny
+* Karwiny
 
-Leszczynki
+* Leszczynki
 
-Mały Kack
+* Mały Kack
 
-Obłuże
+* Obłuże
 
-Oksywie
+* Oksywie
 
-Orłowo
+* Orłowo
 
-Pogórze
+* Pogórze
 
-Pustki Cisowskie-Demptowo
+* Pustki Cisowskie-Demptowo
 
-Redłowo
+* Redłowo
 
-Śródmieście
+* Śródmieście
 
-Wielki Kack
+* Wielki Kack
 
-Witomino Leśniczówka
+* Witomino Leśniczówka
 
-Witomino Radiostacja
+* Witomino Radiostacja
 
-Wzgórze św. Maksymiliana
+* Wzgórze św. Maksymiliana
 
 image::ikona.png[ikonka,600,420]
