--- a/Gdynia/index1.html
+++ b/Gdynia/index1.html
@@ -1,5 +1,7 @@
 = Hello, Gdynia !   <http://gdynia.pl/bip>
 
+== Powierzchnia:
+
 POWIERZCHNIA ogółem - 13 514 ha.
 
 Powierzchnia gruntów komunalnych wynosi 2 823,52 ha.
