--- a/Gdynia/index1.html
+++ b/Gdynia/index1.html
@@ -66,4 +66,8 @@ Grunty Skarbu Państwa w użytkowaniu wieczystym wynoszą 7,76 ha.
 
 * Wzgórze św. Maksymiliana
 
+== Logo miasta Gdynia:
+
+image::logo-Gdynia.jpg[logo-Gdynia,1890,1535]
+
 image::ikona.png[ikonka,600,420]
