--- a/Gdynia/index1.html
+++ b/Gdynia/index1.html
@@ -1,7 +1,9 @@
-= Hello, Gdynia !
+= Hello, Gdynia !  image::ilovegdynialogo.png[ilovegdynia,1000,360]
+
+
+== Biuletyn Informacji Publicznej Urzędu Miasta Gdyni:
 
 <http://gdynia.pl/bip>
-
 
 == Powierzchnia:
 
