--- a/Gdynia/index1.html
+++ b/Gdynia/index1.html
@@ -1,4 +1,5 @@
-= Hello, Gdynia !  image::ilovegdynialogo.png[ilovegdynia,1000,360]
+= Hello, Gdynia !
+image::ilovegdynialogo.png[ilovegdynialogo,1000,360]
 
 
 == Biuletyn Informacji Publicznej Urzędu Miasta Gdyni:
