--- a/Gdynia/index1.html
+++ b/Gdynia/index1.html
@@ -1,6 +1,4 @@
-= *Hello, Gdynia !!!*
-
-image::ilovegdynialogo.png[ilovegdynialogo,2807,1162]
+= *Hello, Gdynia !!!* image:ilovegdynialogo.png[ilovegdynialogo,2807,1162]
 
 
 == Biuletyn Informacji Publicznej Urzędu Miasta Gdyni:
