--- a/Gdynia/index1.html
+++ b/Gdynia/index1.html
@@ -1,5 +1,6 @@
 = *Hello, Gdynia !!!* image:ilovegdynialogo.png[ilovegdynialogo,2807,1162]
 
+czesc dziewczyny
 
 == Biuletyn Informacji Publicznej Urzędu Miasta Gdyni:
 
