--- a/Gdynia/index1.html
+++ b/Gdynia/index1.html
@@ -76,3 +76,5 @@ Grunty Skarbu Państwa w użytkowaniu wieczystym wynoszą 7,76 ha.
 image::logo-Gdynia.jpg[logo-Gdynia,1890,1535]
 
 image::ikona.png[ikonka,600,420]
+
+==czesc jola 
