--- a/Gdynia/index1.html
+++ b/Gdynia/index1.html
@@ -1,4 +1,4 @@
-= *Hello, Gdynia !!!* image:ilovegdynialogo.png[ilovegdynialogo,2807,1162]
+= **_Hello, Gdynia !!!_** image:ilovegdynialogo.png[ilovegdynialogo,2807,1162]
 
 
 == Biuletyn Informacji Publicznej Urzędu Miasta Gdyni:
@@ -25,9 +25,15 @@ Grunty Skarbu Państwa w użytkowaniu wieczystym wynoszą 7,76 ha.
 |===
 
 
-== Dzielnice:
+== Dzielnice Gdyni:
 [squere]
+.Renderowana lista nieuporządkowana z tytułem
+
 * Babie Doły
+** 2 079 ludności
+*** 294 w wieku przedprodukcyjnym
+*** 1 349 w wieku przedprodukcyjnym
+*** 436 w wieku poprodukcyjnym
 
 * Chwarzno-Wiczlino
 
@@ -74,7 +80,3 @@ Grunty Skarbu Państwa w użytkowaniu wieczystym wynoszą 7,76 ha.
 == Logo miasta Gdynia:
 
 image::logo-Gdynia.jpg[logo-Gdynia,1890,1535]
-
-image::ikona.png[ikonka,600,420]
-
-==czesc jola 
