--- a/Gdynia/index.html
+++ b/Gdynia/index.html
@@ -9,16 +9,16 @@
 
 POWIERZCHNIA ogółem - 13 514 ha.
 
-Powierzchnia gruntów komunalnych wynosi 2 823,52 ha.
+**Powierzchnia gruntów komunalnych wynosi 2 823,52 ha.
 
-Poza granicami miasta znajduje się 26,2 ha.
+**Poza granicami miasta znajduje się 26,2 ha.
 
-Grunty Skarbu Państwa w użytkowaniu wieczystym wynoszą 7,76 ha.
+**Grunty Skarbu Państwa w użytkowaniu wieczystym wynoszą 7,76 ha.
 
-== Ludność:
+== Ludność Gdyni w liczbach:
 
 |===
-| Wyszczególnienie	| 30 VI 2017
+| Wyszczególnienie	|  na dzień 30 VI 2017
 | Ludność ogółem	| 246 643
 | mężczyźni | 116 517
 | kobiety | 130 126
