--- a/Gdynia/index.html
+++ b/Gdynia/index.html
@@ -3,7 +3,12 @@
 
 == Biuletyn Informacji Publicznej Urzędu Miasta Gdyni:
 
-<http://gdynia.pl/bip>
+* [x] <http://gdynia.pl/bip>
+
+* [x] <http://www.gdynia.pl>
+
+* [x] e-mail: <http://umgdynia@gdynia.pl>
+
 
 == Powierzchnia:
 
