--- a/Gdynia/index.html
+++ b/Gdynia/index.html
@@ -34,53 +34,53 @@ POWIERZCHNIA ogółem - 13 514 ha.
 [squere]
 .Renderowana lista nieuporządkowana z tytułem
 
-* Babie Doły
+.  Babie Doły
 ** 2 079 ludności
 *** 294 w wieku przedprodukcyjnym
 *** 1 349 w wieku przedprodukcyjnym
 *** 436 w wieku poprodukcyjnym
 
-* Chwarzno-Wiczlino
+. Chwarzno-Wiczlino
 
-* Chylonia
+. Chylonia
 
-* Cisowa
+. Cisowa
 
-* Dąbrowa
+. Dąbrowa
 
-* Działki Leśne
+. Działki Leśne
 
-* Grabówek
+. Grabówek
 
-* Kamienna Góra
+. Kamienna Góra
 
-* Karwiny
+. Karwiny
 
-* Leszczynki
+. Leszczynki
 
-* Mały Kack
+. Mały Kack
 
-* Obłuże
+. Obłuże
 
-* Oksywie
+. Oksywie
 
-* Orłowo
+. Orłowo
 
-* Pogórze
+. Pogórze
 
-* Pustki Cisowskie-Demptowo
+. Pustki Cisowskie-Demptowo
 
-* Redłowo
+. Redłowo
 
-* Śródmieście
+. Śródmieście
 
-* Wielki Kack
+. Wielki Kack
 
-* Witomino Leśniczówka
+. Witomino Leśniczówka
 
-* Witomino Radiostacja
+. Witomino Radiostacja
 
-* Wzgórze św. Maksymiliana
+. Wzgórze św. Maksymiliana
 
 == Logo miasta Gdynia:
 
